Feat: add data for number of pages on Company endpoints